<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

     <TextView
         android:id="@+id/txtLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logged_in"
         android:layout_marginTop="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtname"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_id"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>