<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/imageViewBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTextField"
        android:layout_marginTop="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="Enter Email"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintTop_toBottomOf="@id/resetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetLink"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:background="@drawable/btn_next"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogins"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnGetLink"
        android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>